# series-namer

./: .gitignore  README.md  pyproject.toml
rip_factory/: rip_factory.py
